--- a/DossylEditor/GameProject/NewProjectView.xaml
+++ b/DossylEditor/GameProject/NewProjectView.xaml
@@ -5,29 +5,50 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DossylEditor.GameProject"
              mc:Ignorable="d" Width="800"
+             d:DataContext="{d:DesignInstance Type=local:NewProject, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <StackPanel Background="White">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ListBox Width="195" Height="250"/>
-                <Border Width="400" Height="250" Margin="5,0,0,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0,30,0,0">
-                <TextBlock Text="Name" Width="50"/>
-                <TextBlock Width="550"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0,5,0,0">
-                <TextBlock Text="Path" Width="50"/>
-                <TextBlock Width="500"/>
-                <Button Content="Browse" Width="45" Margin="5,0,0,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0,30,0,0">
-                <Button Content="Create" Width="96" IsDefault="True"/>
-                <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
-            </StackPanel>
+    <UserControl.DataContext>
+        <local:NewProject></local:NewProject>
+    </UserControl.DataContext>
+    <StackPanel Background="White">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <ListBox
+                Width="195"
+                Height="250"
+                ItemsSource="{Binding ProjectTemplates}"
+                x:Name="templateListBox"
+                SelectedIndex="0"
+            >
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Icon}" Margin="0,0,5,0"></Image>
+                            <TextBlock Text="{Binding ProjectType}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Border Width="400" Height="250" Margin="5,0,0,0">
+                <Border.Background>
+                    <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=templateListBox}"></ImageBrush>
+                </Border.Background>
+            </Border>
         </StackPanel>
-    </Grid>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                        Margin="0,30,0,0">
+            <TextBlock Text="Name" Width="50"/>
+            <TextBlock Text="{Binding ProjectName}" Width="550"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                        Margin="0,5,0,0">
+            <TextBlock Text="Path" Width="50"/>
+            <TextBlock Text="{Binding ProjectPath}" Width="500"/>
+            <Button Content="Browse" Width="45" Margin="5,0,0,0"/>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                        Margin="0,30,0,0">
+            <Button Content="Create" Width="96" IsDefault="True"/>
+            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
