--- a/DossylEditor/GameProject/OpenProjectView.xaml
+++ b/DossylEditor/GameProject/OpenProjectView.xaml
@@ -6,17 +6,36 @@
              xmlns:local="clr-namespace:DossylEditor.GameProject"
              mc:Ignorable="d" Width="800"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <StackPanel Background="White">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ListBox Width="195" Height="250"/>
-                <Border Width="400" Height="250" Margin="5,0,0,0"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0,30,0,0">
-                <Button Content="Open" Width="96" IsDefault="True"/>
-                <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
-            </StackPanel>
+    <UserControl.DataContext>
+        <local:OpenProject/>
+    </UserControl.DataContext>
+    <StackPanel Background="White">
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <ListBox Width="195" Height="250" ItemsSource="{Binding Projects}" x:Name="projectsListBox" SelectedIndex="0">
+                <ListBox.ItemContainerStyle>
+                    <Style TargetType="ListBoxItem">
+                        <EventSetter Event="MouseDoubleClick" Handler="OnListBoxItem_Mouse_DoubleClick"/>
+                    </Style>
+                </ListBox.ItemContainerStyle>
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{Binding Icon}" Margin="0,0,5,0"></Image>
+                            <TextBlock Text="{Binding ProjectName}"></TextBlock>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+            <Border Width="400" Height="250" Margin="5,0,0,0">
+                <Border.Background>
+                    <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=projectsListBox}"></ImageBrush>
+                </Border.Background>
+            </Border>
         </StackPanel>
-    </Grid>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                    Margin="0,30,0,0">
+            <Button Content="Open" Width="96" IsDefault="True" Click="OnOpen_Button_Click"/>
+            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
