--- a/DossylEditor/MainWindow.xaml
+++ b/DossylEditor/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DossylEditor"
+        xmlns:editors="clr-namespace:DossylEditor.Editors"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="Dossyl Editor" Height="450" Width="800">
+        Title="Dossyl Editor" Height="1080" Width="1920">
     <Grid>
-
+        <editors:WorldEditorView />
     </Grid>
 </Window>
