--- a/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -34,7 +34,15 @@
                 <GridSplitter Grid.Row="1" Height="5"
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Top" />
-                <utl:UndoRedoView DataContext="{Binding undoRedo}" Grid.Row="1"/>
+                <TabControl Grid.Row="1">
+                    <TabItem Header="History">
+                        <utl:UndoRedoView DataContext="{Binding undoRedo}"/>
+                    </TabItem>
+                    <TabItem Header="Log">
+                        <utl:LoggerView />
+                    </TabItem>
+                </TabControl>
+                
             </Grid>
             <GridSplitter Grid.Column="1" Width="5"
                       HorizontalAlignment="Left"
