--- a/DossylEditor/App.xaml
+++ b/DossylEditor/App.xaml
@@ -6,6 +6,8 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Dictionaries/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Dictionaries/EditorColors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/Dictionaries/ControlTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
