--- a/DossylEditor/GameProject/NewProjectView.xaml
+++ b/DossylEditor/GameProject/NewProjectView.xaml
@@ -10,47 +10,64 @@
     <UserControl.DataContext>
         <local:NewProject></local:NewProject>
     </UserControl.DataContext>
-    <StackPanel Background="White">
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <ListBox
-                Width="195"
-                Height="250"
-                ItemsSource="{Binding ProjectTemplates}"
-                x:Name="templateListBox"
-                SelectedIndex="0"
+    <Border
+        CornerRadius="3"
+        Background="{StaticResource Editor.Window.GreyBrush3}"
+        Width="700"
+        HorizontalAlignment="Center"
+        Margin="0,30"
+    >
+        <StackPanel>
+            <StackPanel
+                Orientation="Horizontal"
+                HorizontalAlignment="Center"
+                Margin="0,20,0,0"
             >
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <Image Source="{Binding Icon}" Margin="0,0,5,0"></Image>
-                            <TextBlock Text="{Binding ProjectType}"></TextBlock>
-                        </StackPanel>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
-            <Border Width="400" Height="250" Margin="5,0,0,0">
-                <Border.Background>
-                    <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=templateListBox}"></ImageBrush>
-                </Border.Background>
-            </Border>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                <ListBox
+                    Width="195"
+                    Height="250"
+                    ItemsSource="{Binding ProjectTemplates}"
+                    x:Name="templateListBox"
+                    SelectedIndex="0"
+                >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <Image Source="{Binding Icon}" Margin="0,0,5,0"></Image>
+                                <TextBlock Text="{Binding ProjectType}"></TextBlock>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <Border Width="400" Height="250" Margin="5,0,0,0">
+                    <Border.Background>
+                        <ImageBrush ImageSource="{Binding Path=SelectedItem.Screenshot, ElementName=templateListBox}"></ImageBrush>
+                    </Border.Background>
+                </Border>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,30,0,0">
-            <TextBlock Text="Name" Width="50"/>
-            <TextBox Text="{Binding ProjectName, UpdateSourceTrigger=PropertyChanged}" Width="550"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                <TextBlock Text="Name" Width="50" Style="{StaticResource LightTextBlockStyle}" />
+                <TextBox Text="{Binding ProjectName, UpdateSourceTrigger=PropertyChanged}" Width="550"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,5,0,0">
-            <TextBlock Text="Path" Width="50"/>
-            <TextBox Text="{Binding ProjectPath, UpdateSourceTrigger=PropertyChanged}" Width="500"/>
-            <Button Content="Browse" Width="45" Margin="5,0,0,0"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
+                <TextBlock Text="Path" Width="50" Style="{StaticResource LightTextBlockStyle}" />
+                <TextBox Text="{Binding ProjectPath, UpdateSourceTrigger=PropertyChanged}" Width="500"/>
+                <Button Content="Browse" Width="45" Margin="5,0,0,0"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
                         Margin="0,30,0,0">
-            <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"
+                <Button Content="Create" Width="96" IsDefault="True" IsEnabled="{Binding IsValid}"
                     Click="OnCreate_Button_Click"/>
-            <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+                <Button Content="Exit" Width="96" Margin="30,0,0,0" IsCancel="True"/>
+            </StackPanel>
+            <TextBlock
+                Text="{Binding ErrorMsg}"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Center"
+                Foreground="{StaticResource Editor.RedBrush}"
+            ></TextBlock>
         </StackPanel>
-        <TextBlock Text="{Binding ErrorMsg}" Margin="0,20,0,0" HorizontalAlignment="Center"></TextBlock>
-    </StackPanel>
+    </Border>
 </UserControl>
