--- a/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -31,10 +31,18 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <GridSplitter Grid.Row="1" Height="5"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Top" />
-                <TabControl Grid.Row="1">
+                <GridSplitter
+                    Grid.Row="1"
+                    Height="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Top"
+                    Background="Transparent"
+                />
+                <TabControl
+                    Grid.Row="1"
+                    Background="{StaticResource Editor.Window.GreyBrush2}"
+                    Margin="0,5,0,0"
+                >
                     <TabItem Header="History">
                         <utl:UndoRedoView DataContext="{Binding undoRedo}"/>
                     </TabItem>
@@ -44,19 +52,33 @@
                 </TabControl>
                 
             </Grid>
-            <GridSplitter Grid.Column="1" Width="5"
-                      HorizontalAlignment="Left"
-                      VerticalAlignment="Stretch" />
+            <GridSplitter
+                Grid.Column="1"
+                Width="5"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Stretch"
+                Background="Transparent"
+            />
             <Grid Grid.Column="1" Margin="5,0,0,0">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <GridSplitter Grid.Row="1" Height="5"
-                          HorizontalAlignment="Stretch"
-                          VerticalAlignment="Top" />
-                <local:ProjectLayoutView />
-                <local:GameEntityView Grid.Row="1"/>
+                <GridSplitter
+                    Grid.Row="1"
+                    Height="5"
+                    HorizontalAlignment="Stretch"
+                    VerticalAlignment="Top"
+                    Background="Transparent"
+                />
+                <local:ProjectLayoutView
+                    Background="{StaticResource Editor.Window.GreyBrush3}"
+                />
+                <local:GameEntityView
+                    Grid.Row="1"
+                    Background="{StaticResource Editor.Window.GreyBrush3}"
+                    Margin="0,5,0,0"
+                />
             </Grid>
         </Grid>
     </Grid>
