--- a/DossylEditor/GameProject/NewProjectView.xaml
+++ b/DossylEditor/GameProject/NewProjectView.xaml
@@ -34,7 +34,12 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="{Binding Icon}" Margin="0,0,5,0"></Image>
-                                <TextBlock Text="{Binding ProjectType}"></TextBlock>
+                                <TextBlock
+                                    Text="{Binding ProjectType}"
+                                    FontSize="18"
+                                    FontFamily="AgencyFB"
+                                    VerticalAlignment="Center"
+                                ></TextBlock>
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
