--- a/DossylEditor/Utilities/LoggerView.xaml
+++ b/DossylEditor/Utilities/LoggerView.xaml
@@ -6,28 +6,48 @@
              xmlns:local="clr-namespace:DossylEditor.Utilities"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <DockPanel>
-        <Border Height="32" DockPanel.Dock="Top">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="4,0" VerticalAlignment="Center">
-                <Button Content="Clear" Margin="1,0" Click="OnClear_Button_Click" Focusable="False" />
-                <ToggleButton IsChecked="True" Content="info"
-                    Margin="1,0" ToolTip="Toggle informational messages"
-                    x:Name="toggleInfos" Click="OnMessageFilter_ButtonClick"
-                />
-                <ToggleButton IsChecked="True" Content="warn"
-                    Margin="1,0" ToolTip="Toggle warning messages"
-                    x:Name="toggleWarnings" Click="OnMessageFilter_ButtonClick"
-                />
-                <ToggleButton IsChecked="True" Content="error"
-                    Margin="1,0" ToolTip="Toggle error messages"
-                    x:Name="toggleErrors" Click="OnMessageFilter_ButtonClick"
-                />
-            </StackPanel>
-        </Border>
+    <UserControl.Resources>
+        <Style TargetType="{x:Type ToggleButton}">
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            <Setter Property="BorderBrush" Value="{StaticResource Editor.Window.GreyBrush4}"/>
+            <Setter Property="BorderThickness" Value="1"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Width" Value="18" />
+            <EventSetter Event="Click" Handler="OnMessageFilter_ButtonClick" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type ToggleButton}">
+                        <Border
+                            x:Name="outerBorder"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            SnapsToDevicePixels="true"
+                        >
+                            <Border x:Name="innerBorder" Background="{TemplateBinding Background}" Margin="1"></Border>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush" TargetName="outerBorder" Value="{Binding Background, ElementName=innerBorder}"/>
+                            </Trigger>
+                            <Trigger Property="IsChecked" Value="False">
+                                <Setter Property="Opacity" TargetName="innerBorder" Value="0.5"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Opacity" TargetName="innerBorder" Value="0.2"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
+    <Grid>
         <ScrollViewer
             VerticalScrollBarVisibility="Auto"
             HorizontalScrollBarVisibility="Auto"
             x:Name="scrollViewer"
+            Background="{StaticResource Editor.Window.GreyBrush2}"
         >
             <ItemsControl ItemsSource="{Binding Source={x:Static local:Logger.FilteredMessages}}">
                 <ItemsControl.ItemsPanel>
@@ -43,7 +63,11 @@
                                     <Setter Property="Background" Value="Transparent" />
                                     <Style.Triggers>
                                         <Trigger Property="IsMouseOver" Value="True">
-                                            <Setter Property="Background" Value="Gray" />
+                                            <Setter Property="Background">
+                                                <Setter.Value>
+                                                    <SolidColorBrush Color="{StaticResource Editor.Selected.BackgroundColor}" Opacity="0.5"/>
+                                                </Setter.Value>
+                                            </Setter>
                                         </Trigger>
                                     </Style.Triggers>
                                 </Style>
@@ -63,11 +87,31 @@
                                     </Style>
                                 </TextBlock.Style>
                             </TextBlock>
-                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" />
+                            <TextBlock Text="{Binding Message}" TextWrapping="Wrap" Style="{StaticResource LightTextBlockStyle}"/>
                         </DockPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </ScrollViewer>
-    </DockPanel>
+        <Border Height="32" VerticalAlignment="Top" Background="{StaticResource Editor.Window.GreyBrush3}">
+            <Border.Effect>
+                <DropShadowEffect Opacity="0.3" BlurRadius="10" ShadowDepth="0" />
+            </Border.Effect>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="4,0" VerticalAlignment="Center">
+                <Button Content="Clear" Margin="1,0" Click="OnClear_Button_Click" Focusable="False" />
+                <ToggleButton IsChecked="True" Content="info"
+                    Margin="1,0" ToolTip="Toggle informational messages"
+                    x:Name="toggleInfos" Background="{StaticResource Editor.GreenBrush}"
+                />
+                <ToggleButton IsChecked="True" Content="warn"
+                    Margin="1,0" ToolTip="Toggle warning messages"
+                    x:Name="toggleWarnings" Background="{StaticResource Editor.OrangeBrush}"
+                />
+                <ToggleButton IsChecked="True" Content="error"
+                    Margin="1,0" ToolTip="Toggle error messages"
+                    x:Name="toggleErrors" Background="{StaticResource Editor.RedBrush}"
+                />
+            </StackPanel>
+        </Border>
+    </Grid>
 </UserControl>
