--- a/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DossylEditor.Editors"
              xmlns:utl="clr-namespace:DossylEditor.Utilities"
+			 xmlns:ctlr="clr-namespace:DossylEditor.Utilities.Controls"
              mc:Ignorable="d" Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.InputBindings>
@@ -31,7 +32,26 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                <GridSplitter
+				<Border Background="{StaticResource Editor.Selected.BackgroundBrush}">
+					<StackPanel VerticalAlignment="Center">
+						<ctlr:NumberBox
+							VerticalAlignment="Center"
+							Value="0"
+							Multiplier="1000"
+							Foreground="{StaticResource Editor.FontBrush}"
+							Background="{StaticResource Editor.OrangeBrush}"
+						/>
+						<ctlr:ScalarBox Value="10" Multiplier="10"/>
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector2"/>
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector3"/>
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector4"/>
+
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector2" Orientation="Vertical"/>
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector3" Orientation="Vertical"/>
+						<ctlr:VectorBox X="0" Y="1" Z="2" W="3" VectorType="Vector4" Orientation="Vertical"/>
+					</StackPanel>
+				</Border>
+				<GridSplitter
                     Grid.Row="1"
                     Height="5"
                     HorizontalAlignment="Stretch"
