--- a/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
+++ b/DossylEditor/Editors/WorldEditor/WorldEditorView.xaml
@@ -6,12 +6,18 @@
              xmlns:local="clr-namespace:DossylEditor.Editors"
              xmlns:utl="clr-namespace:DossylEditor.Utilities"
 			 xmlns:ctlr="clr-namespace:DossylEditor.Utilities.Controls"
+			 xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" Focusable="True"
              d:DesignHeight="450" d:DesignWidth="800">
+	<UserControl.Resources>
+		<sys:Boolean x:Key="True">True</sys:Boolean>
+		<sys:Boolean x:Key="False">False</sys:Boolean>
+	</UserControl.Resources>
     <UserControl.InputBindings>
         <KeyBinding Command="{Binding UndoCommand}" Key="Z" Modifiers="Ctrl"/>
-        <KeyBinding Command="{Binding RedoCommand}" Key="Y" Modifiers="Ctrl"/>
+        <KeyBinding Command="{Binding RedoCommand}" Key="Z" Modifiers="Ctrl+Shift"/>
         <KeyBinding Command="{Binding SaveCommand}" Key="S" Modifiers="Ctrl"/>
+		<KeyBinding Command="{Binding BuildCommand}" Key="F7"/>
     </UserControl.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
@@ -21,7 +27,29 @@
         <StackPanel Orientation="Horizontal">
             <Button Content="Undo" Command="{Binding UndoCommand}"/>
             <Button Content="Redo" Command="{Binding RedoCommand}" Margin="5,0"/>
-			<Button Content="New Script" Click="OnNewScript_Button_Click"/>
+			<Button
+				Content="New Script"
+				Click="OnNewScript_Button_Click"
+				Margin="5,0"
+				IsEnabled="{Binding Path=IsEnabled, ElementName=buildButton}"
+			/>
+			<Button
+				x:Name="buildButton"
+				Content="Build"
+				Margin="5,0"
+				Command="{Binding BuildCommand}"
+				CommandParameter="{StaticResource True}"
+			/>
+			<ComboBox
+				x:Name="runConfig"
+				VerticalAlignment="Center"
+				Margin="10,0"
+				Width="72"
+				SelectedIndex="{Binding BuildConfig}"
+			>
+				<ComboBoxItem Content="Debug"/>
+				<ComboBoxItem Content="Release"/>
+			</ComboBox>
 		</StackPanel>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -59,20 +87,26 @@
                     VerticalAlignment="Top"
                     Background="Transparent"
                 />
-                <TabControl
-                    Grid.Row="1"
-                    Background="{StaticResource Editor.Window.GreyBrush2}"
-                    Margin="0,5,0,0"
-                >
-                    <TabItem Header="History">
-                        <utl:UndoRedoView DataContext="{Binding undoRedo}"/>
-                    </TabItem>
-                    <TabItem Header="Log">
-                        <utl:LoggerView />
-                    </TabItem>
-                </TabControl>
-                
-            </Grid>
+				<Grid Grid.Row="1" Margin="0,5,0,0">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition/>
+						<ColumnDefinition/>
+					</Grid.ColumnDefinitions>
+					<utl:UndoRedoView
+						DataContext="{Binding undoRedo}"
+						Grid.Column="0"
+						Background="{StaticResource Editor.Window.GreyBrush2}"
+					/>
+					<GridSplitter
+						Grid.Column="1"
+						Width="5"
+						VerticalAlignment="Stretch"
+						HorizontalAlignment="Left"
+						Background="Transparent"
+					/>
+					<utl:LoggerView Grid.Column="1" Margin="5,0,0,0"/>
+				</Grid>
+			</Grid>
             <GridSplitter
                 Grid.Column="1"
                 Width="5"
