--- a/DossylEditor/Utilities/LoggerView.xaml
+++ b/DossylEditor/Utilities/LoggerView.xaml
@@ -48,6 +48,7 @@
             HorizontalScrollBarVisibility="Auto"
             x:Name="scrollViewer"
             Background="{StaticResource Editor.Window.GreyBrush2}"
+			Margin="0,32,0,0"
         >
             <ItemsControl ItemsSource="{Binding Source={x:Static local:Logger.FilteredMessages}}">
                 <ItemsControl.ItemsPanel>
