--- a/DossylEditor/Editors/WorldEditor/GameEntityView.xaml
+++ b/DossylEditor/Editors/WorldEditor/GameEntityView.xaml
@@ -5,12 +5,47 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DossylEditor.Editors"
 			 xmlns:vm="clr-namespace:DossylEditor.Components"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" Background="{StaticResource Editor.Window.GreyBrush3}"
+			 d:DataContext="{d:DesignInstance Type=vm:MSGameEntity, IsDesignTimeCreatable=True}"
              d:DesignHeight="450" d:DesignWidth="800">
 	<UserControl.Resources>
 		<DataTemplate DataType="{x:Type vm:MSTransform}">
 			<local:TransformView/>
 		</DataTemplate>
+		<DataTemplate DataType="{x:Type vm:MSScript}">
+			<local:ScriptView/>
+		</DataTemplate>
+		<ContextMenu
+			x:Key="addComponentMenu"
+			IsOpen="{Binding Path=IsChecked, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type ToggleButton}}}"
+		>
+			<MenuItem Header="Geometry"/>
+			<MenuItem Header="Physics">
+				<MenuItem Header="Rigidbody"/>
+			</MenuItem>
+			<MenuItem Header="Script" ItemsSource="{Binding SelectedEntities[0].ParentScene.Project.AvailableScripts}">
+				<MenuItem.Style>
+					<Style TargetType="{x:Type MenuItem}">
+						<Setter Property="Padding" Value="5,3,2,3"/>
+						<Style.Triggers>
+							<DataTrigger
+								Binding="{Binding SelectedEntities[0].ParentScene.Project.AvailableScripts}"
+								Value="{x:Null}"
+							>
+								<Setter Property="IsEnabled" Value="False"/>
+							</DataTrigger>
+						</Style.Triggers>
+					</Style>
+				</MenuItem.Style>
+				<MenuItem.ItemContainerStyle>
+					<Style TargetType="{x:Type MenuItem}">
+						<Setter Property="Padding" Value="5,3,2,3"/>
+						<Setter Property="Header" Value="{Binding}"/>
+						<EventSetter Event="Click" Handler="OnAddScriptComponent"/>
+					</Style>
+				</MenuItem.ItemContainerStyle>
+			</MenuItem>
+		</ContextMenu>
 	</UserControl.Resources>
     <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
         <ScrollViewer.Style>
@@ -22,23 +57,37 @@
                 </Style.Triggers>
             </Style>
         </ScrollViewer.Style>
-        <StackPanel>
-            <Border Height="32">
-                <ToggleButton x:Name="addComponent" VerticalAlignment="Center"
-                              HorizontalAlignment="Left" Margin="5,0,0,0">
+        <StackPanel Background="{StaticResource Editor.Window.GreyBrush4}">
+            <Border Height="32" Background="{StaticResource Editor.Window.GreyBrush3}">
+                <ToggleButton
+					x:Name="addComponent"
+					VerticalAlignment="Center"
+					HorizontalAlignment="Left"
+					Margin="5,0,0,0"
+					ClickMode="Press"
+					Focusable="False"
+					PreviewMouseLeftButtonDown="OnAddComponent_Button_PreviewMouse_LBD"
+				>
                     <ToggleButton.Content>
                         <DockPanel>
                             <TextBlock Text="Add Component" Margin="5,0" />
-                            <Path Margin="3,0,2,0"
-                                  Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
-                                  HorizontalAlignment="Center" Fill="Black"
-                                  VerticalAlignment="Center" />
+                            <Path
+								Margin="3,0,2,0"
+								Data="M0,0 L0,2 L4,6 L8,2 L8,0 L4,4 z"
+								HorizontalAlignment="Center" Fill="Black"
+								VerticalAlignment="Center"
+							/>
                         </DockPanel>
                     </ToggleButton.Content>
                 </ToggleButton>
             </Border>
-            <Grid>
-                <Grid.ColumnDefinitions>
+			<Grid
+				Margin="0,1"
+				Background="{StaticResource Editor.Window.GreyBrush3}"
+				SnapsToDevicePixels="True"
+				Height="32"
+			>
+				<Grid.ColumnDefinitions>
                     <ColumnDefinition Width="78" />
                     <ColumnDefinition />
                     <ColumnDefinition Width="Auto" />
